prevent horizontal scroll on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@ html, body, #__nuxt{
     height: 100%;
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
+    overflow-x: hidden;
     width: 100%;
 }
 
